fixed endpoints